# atlas-mc-scanner

./: README.md  pyproject.toml
src/atlas_mc_scanner/: cli.py  common.py  decays.py  find_containers.py  list_particles.py
