[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-mc-scanner"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Gordon Watts", email = "gwatts@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Gordon Watts/atlas-mc-scanner#readme"
Issues = "https://github.com/Gordon Watts/atlas-mc-scanner/issues"
Source = "https://github.com/Gordon Watts/atlas-mc-scanner"

[tool.hatch.version]
path = "src/atlas_mc_scanner/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/atlas_mc_scanner tests}"

[tool.coverage.run]
source_pkgs = ["atlas_mc_scanner", "tests"]
branch = true
parallel = true
omit = [
  "src/atlas_mc_scanner/__about__.py",
]

[tool.coverage.paths]
atlas_mc_scanner = ["src/atlas_mc_scanner", "*/atlas-mc-scanner/src/atlas_mc_scanner"]
tests = ["tests", "*/atlas-mc-scanner/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
